Feita saudação personalizada

--- a/desafio para entrega (29 abril)/contador de cliques com reset.html
+++ b/desafio para entrega (29 abril)/contador de cliques com reset.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Lista de tarefas</title>
+    <title>Conta clique</title>
     <script>
   function Resetar() {
     document.getElementById("CliquesTotais").innerHTML = ""; //Reseta os cliques
